fix: white background section on the bottom of the page shows when scrolling on mobile devices
Change height unit to 100dvh from 100% on htmlm, body and add scrolling behaviour.

--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,8 @@
 html,
 body {
   min-height: 100%;
-  max-width: 100%;
+  min-height: 100dvh;
+  width: 100%;
   margin: 0;
   padding: 0;
 
@@ -51,6 +52,9 @@ body {
   box-sizing: border-box;
   /* space between the top of the scroll container and the top of the viewport for stuff like scrollIntoView */
   scroll-padding-top: 54px; 
+  overscroll-behavior: none;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: auto;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
